--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dependencies": {
         "axios": "^1.7.7",
         "cheerio": "^1.0.0",
+        "mongodb": "^6.9.0",
+        "mongoose": "^8.6.3",
         "next": "14.2.13",
         "react": "^18",
         "react-dom": "^18",
