--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "mongodb": "^6.9.0",
         "mongoose": "^8.6.3",
         "next": "14.2.13",
+        "nodemailer": "^6.9.15",
         "react": "^18",
         "react-dom": "^18",
         "react-responsive-carousel": "^3.2.23"
@@ -22,6 +23,7 @@
     "devDependencies": {
         "@iconify/react": "^5.0.2",
         "@types/node": "^20",
+        "@types/nodemailer": "^6.4.16",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "postcss": "^8",
